--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.17.2",
     "fs-extra": "^10.0.0",
     "helmet": "^4.6.0",
+    "joi": "^17.6.0",
     "knex": "^0.95.7",
     "multer": "^1.4.3",
     "nodemon": "^2.0.9",
